feat: add full name field to user
