# routes/private/user.js
@@ -3,9 +3,10 @@ const Router = require('koa-router');
 const router = new Router();
 
 router.get('/user', function* userInfo() { // eslint-disable-line require-yield
-  const { username, city, state } = this.passport.user;
+  const { username, fullname, city, state } = this.passport.user;
   this.body = {
     username,
+    fullname,
     city,
     state,
   };
