# swagger.yaml
@@ -115,14 +115,14 @@ paths:
               $ref: "#/definitions/BookBase"
   /user:
     get:
-      description: "get user profile"
+      description: "get current user profile"
       security:
         - SessionCookie: []
       responses:
         200:
           description: "Profile data"
           schema:
-            $ref: "#/definitions/UserBase"             
+            $ref: "#/definitions/UserWithUsername"
   /profile:
     put:
       description: "update profile"
@@ -267,16 +267,24 @@ definitions:
   UserBase:
     type: object
     required:
-      - name
+      - fullname
       - city
       - state
     properties:
-      name:
+      fullname:
         type: string
       city:
         type: string
       state:
         type: string
+  UserWithUsername:
+    type: object
+    allOf:
+      - $ref: "#/definitions/UserBase"
+      - type: object
+        properties:
+          username:
+            type: string
   User:
     type: object
     allOf:
@@ -316,11 +324,8 @@ definitions:
       - $ref: "#/definitions/UserLogin"
       - type: object
         required:
-          - repeatPassword
           - captchaResponse
         properties:
-          repeatPassword:
-            type: string
           captchaResponse:
             type: string
   Book:
